@@ -7,6 +7,7 @@ import org.springframework.stereotype.Component;
 import com.brainpix.profile.dto.CompanyProfileResponseDto;
 import com.brainpix.profile.dto.IndividualProfileResponseDto;
 import com.brainpix.profile.entity.CompanyProfile;
+import com.brainpix.profile.entity.Contact;
 import com.brainpix.profile.entity.IndividualProfile;
 import com.brainpix.user.entity.Company;
 import com.brainpix.user.entity.User;
@@ -26,11 +27,12 @@ public class MyProfileConverter {
 			.name(user.getName())
 			.selfIntroduction(profile.getSelfIntroduction())
 			.contacts(profile.getContacts().stream()
+				.filter(Contact::getIsPublic)
 				.map(contact -> IndividualProfileResponseDto.ContactDto.builder()
 					.type(contact.getType())
 					.value(contact.getValue())
 					.build())
-				.collect(Collectors.toList()))
+				.toList())
 			.stacks(profile.getStacks().stream()
 				.map(stack -> IndividualProfileResponseDto.StackDto.builder()
 					.stackName(stack.getStackName())
